--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <header>
       <!--page navigation-->
       <nav>
-        <a href="/">WebStudio</a>
+        <a href="/" lang="en" class="logo">Web <span class="logo__dark">Studio</span></a>
         <ul>
-          <li><a href="">Студия</a></li>
-          <li><a href="">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+          <li><a href="#">Студия</a></li>
+          <li><a href="#">Портфолио</a></li>
+          <li><a href="#">Контакты</a></li>
         </ul>
       </nav>
       <!--contacts info not in nav-->
@@ -30,38 +30,42 @@
         <h1>Эффективные решения для вашего бизнеса</h1>
         <button type="button">Заказать услугу</button>
       </section>
-      <!--Section benefits-->
+      <!--Section features-->
       <section>
         <!--make invisible h2 later-->
-        <h2>Benefits</h2>
-        <ul>
-          <li>
-            <h3>Внимание к деталям</h3>
-            <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+        <h2 class="section__title">Benefits</h2>
+        <ul class="feature">
+          <li class="feature__item">
+            <h3 class="feature__title">Внимание к деталям</h3>
+            <p class="feature__text">
+              Идейные соображения, а также начало повседневной работы по формированию позиции.
+            </p>
           </li>
-          <li>
-            <h3>Пунктуальность</h3>
-            <p>
+          <li class="feature__item">
+            <h3 class="feature__title">Пунктуальность</h3>
+            <p class="feature__text">
               Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
             </p>
           </li>
-          <li>
-            <h3>Планирование</h3>
-            <p>
+          <li class="feature__item">
+            <h3 class="feature__title">Планирование</h3>
+            <p class="feature__text">
               Равным образом консультация с широким активом в значительной степени обуславливает.
             </p>
           </li>
-          <li>
-            <h3>Современные технологии</h3>
-            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+          <li class="feature__item">
+            <h3 class="feature__title">Современные технологии</h3>
+            <p class="feature__text">
+              Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+            </p>
           </li>
         </ul>
       </section>
-      <!--Section what_are_we_doing-->
+      <!--Section work-->
       <section>
-        <h2>Чем мы занимаемся</h2>
-        <ul>
-          <li>
+        <h2 class="section__title">Чем мы занимаемся</h2>
+        <ul class="work">
+          <li class="work__item">
             <img
               src="./images/block_scheme2.jpg"
               alt="Руки кодирующие на ноутбуке по блок-схеме"
@@ -69,7 +73,7 @@
               height="294"
             />
           </li>
-          <li>
+          <li class="work__item">
             <img
               src="./images/mobile_vers2.jpg"
               alt="Экран ноутбука с вариатами моб.приложений"
@@ -77,7 +81,7 @@
               height="294"
             />
           </li>
-          <li>
+          <li class="work__item">
             <img
               src="./images/laptop_vers2.jpg"
               alt="Планшет с игрой в руках "
@@ -89,58 +93,63 @@
       </section>
       <!--our_team-->
       <section>
-        <h2>Наша команда</h2>
-        <ul>
-          <li>
+        <h2 class="section__title">Наша команда</h2>
+        <ul class="team">
+          <li class="team__item">
             <img
               src="./images/ihor_demian2.jpg"
               alt="Фотография Игорь Демьяненко"
               width="270"
               height="260"
             />
-            <h3>Игорь Демьяненко</h3>
-            <p>Product Designer</p>
+            <h3 class="team__title">Игорь Демьяненко</h3>
+            <p class="team__text">Product Designer</p>
           </li>
-          <li>
+          <li class="team__item">
             <img
               src="./images/olha_repina2.jpg"
               alt="Фотография Ольга Репина"
               width="270"
               height="260"
             />
-            <h3>Ольга Репина</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team__title">Ольга Репина</h3>
+            <p class="team__text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team__item">
             <img
               src="./images/nikolaj_tarasov2.jpg"
               alt="Фотография Николай Тарасов"
               width="270"
               height="260"
             />
-            <h3>Николай Тарасов</h3>
-            <p>Marketing</p>
+            <h3 class="team__title">Николай Тарасов</h3>
+            <p class="team__text">Marketing</p>
           </li>
-          <li>
+          <li class="team__item">
             <img
               src="./images/michail_ermakov2.jpg"
               alt="Фотография Михаил Ермаков"
               width="270"
               height="260"
             />
-            <h3>Михаил Ермаков</h3>
-            <p>UI Designer</p>
+            <h3 class="team__title">Михаил Ермаков</h3>
+            <p class="team__text">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <!--Footer-->
     <footer>
-      <a href="/">WebStudio</a>
+      <a href="#" class="Logo">Web<span class="logo__light">Studio</span></a>
       <address>
         <ul>
           <li>
-            <a href="https://goo.gl/maps/vdUjSE2Tv6SdJSwDA">г. Киев, пр-т Леси Украинки, 26</a>
+            <a
+              href="https://goo.gl/maps/vdUjSE2Tv6SdJSwDA"
+              target="_blank"
+              rel="noopener noreferrer"
+              >г. Киев, пр-т Леси Украинки, 26
+            </a>
           </li>
           <li><a href="mailto:info@example.com">info@example.com</a></li>
           <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
