--- a/index.html
+++ b/index.html
@@ -1,71 +1,75 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!--Header-->
-    <header>
+    <header class="header">
       <!--page navigation-->
       <nav>
-        <a href="/" lang="en" class="logo">Web <span class="logo__dark">Studio</span></a>
-        <ul>
-          <li><a href="#">Студия</a></li>
-          <li><a href="#">Портфолио</a></li>
-          <li><a href="#">Контакты</a></li>
+        <a href="/" lang="en" class="logo">Web <span class="logo-dark">Studio</span></a>
+        <ul class="site-nav">
+          <li><a class="link-header" href="./index.html">Студия</a></li>
+          <li>
+            <a class="link-header" href="./portfolio.html">Портфолио</a>
+          </li>
+          <li><a class="link-header contact" href="#">Контакты</a></li>
         </ul>
       </nav>
       <!--contacts info not in nav-->
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="header-contacts">
+        <li><a class="link-header" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a class="link-header" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
+
     <main>
       <!--Section effective_solution_for_your_business-->
-      <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button">Заказать услугу</button>
+      <section class="section-main">
+        <h1 class="main-header">Эффективные решения для вашего бизнеса</h1>
+        <button class="main-button" type="button">Заказать услугу</button>
       </section>
       <!--Section features-->
-      <section>
+      <section class="section-features">
         <!--make invisible h2 later-->
-        <h2 class="section__title">Benefits</h2>
+        <h2 class="section-title">Benefits</h2>
         <ul class="feature">
-          <li class="feature__item">
-            <h3 class="feature__title">Внимание к деталям</h3>
-            <p class="feature__text">
+          <li class="feature-item">
+            <h3 class="feature-title">Внимание к деталям</h3>
+            <p class="feature-text">
               Идейные соображения, а также начало повседневной работы по формированию позиции.
             </p>
           </li>
-          <li class="feature__item">
-            <h3 class="feature__title">Пунктуальность</h3>
-            <p class="feature__text">
+          <li class="feature-item">
+            <h3 class="feature-title">Пунктуальность</h3>
+            <p class="feature-text">
               Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
             </p>
           </li>
-          <li class="feature__item">
-            <h3 class="feature__title">Планирование</h3>
-            <p class="feature__text">
+          <li class="feature-item">
+            <h3 class="feature-title">Планирование</h3>
+            <p class="feature-text">
               Равным образом консультация с широким активом в значительной степени обуславливает.
             </p>
           </li>
-          <li class="feature__item">
-            <h3 class="feature__title">Современные технологии</h3>
-            <p class="feature__text">
+          <li class="feature-item">
+            <h3 class="feature-title">Современные технологии</h3>
+            <p class="feature-text">
               Значимость этих проблем настолько очевидна, что реализация плановых заданий.
             </p>
           </li>
         </ul>
       </section>
       <!--Section work-->
-      <section>
-        <h2 class="section__title">Чем мы занимаемся</h2>
+      <section class="section-work">
+        <h2 class="section-title">Чем мы занимаемся</h2>
         <ul class="work">
-          <li class="work__item">
+          <li class="work-item">
             <img
               src="./images/block_scheme2.jpg"
               alt="Руки кодирующие на ноутбуке по блок-схеме"
@@ -73,7 +77,7 @@
               height="294"
             />
           </li>
-          <li class="work__item">
+          <li class="work-item">
             <img
               src="./images/mobile_vers2.jpg"
               alt="Экран ноутбука с вариатами моб.приложений"
@@ -81,7 +85,7 @@
               height="294"
             />
           </li>
-          <li class="work__item">
+          <li class="work-item">
             <img
               src="./images/laptop_vers2.jpg"
               alt="Планшет с игрой в руках "
@@ -92,67 +96,68 @@
         </ul>
       </section>
       <!--our_team-->
-      <section>
-        <h2 class="section__title">Наша команда</h2>
+      <section class="section-team">
+        <h2 class="section-title">Наша команда</h2>
         <ul class="team">
-          <li class="team__item">
+          <li class="team-item">
             <img
               src="./images/ihor_demian2.jpg"
               alt="Фотография Игорь Демьяненко"
               width="270"
               height="260"
             />
-            <h3 class="team__title">Игорь Демьяненко</h3>
-            <p class="team__text">Product Designer</p>
+            <h3 class="team-title">Игорь Демьяненко</h3>
+            <p lang="en" class="team-text">Product Designer</p>
           </li>
-          <li class="team__item">
+          <li class="team-item">
             <img
               src="./images/olha_repina2.jpg"
               alt="Фотография Ольга Репина"
               width="270"
               height="260"
             />
-            <h3 class="team__title">Ольга Репина</h3>
-            <p class="team__text">Frontend Developer</p>
+            <h3 class="team-title">Ольга Репина</h3>
+            <p lang="en" class="team-text">Frontend Developer</p>
           </li>
-          <li class="team__item">
+          <li class="team-item">
             <img
               src="./images/nikolaj_tarasov2.jpg"
               alt="Фотография Николай Тарасов"
               width="270"
               height="260"
             />
-            <h3 class="team__title">Николай Тарасов</h3>
-            <p class="team__text">Marketing</p>
+            <h3 class="team-title">Николай Тарасов</h3>
+            <p lang="en" class="team-text">Marketing</p>
           </li>
-          <li class="team__item">
+          <li class="team-item">
             <img
               src="./images/michail_ermakov2.jpg"
               alt="Фотография Михаил Ермаков"
               width="270"
               height="260"
             />
-            <h3 class="team__title">Михаил Ермаков</h3>
-            <p class="team__text">UI Designer</p>
+            <h3 class="team-title">Михаил Ермаков</h3>
+            <p lang="en" class="team-text">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <!--Footer-->
     <footer>
-      <a href="#" class="Logo">Web<span class="logo__light">Studio</span></a>
+      <a href="#" class="logo">Web<span class="logo-light">Studio</span></a>
       <address>
-        <ul>
+        <ul class="footer">
           <li>
             <a
+              class="link-footer location"
               href="https://goo.gl/maps/vdUjSE2Tv6SdJSwDA"
               target="_blank"
               rel="noopener noreferrer"
               >г. Киев, пр-т Леси Украинки, 26
             </a>
           </li>
-          <li><a href="mailto:info@example.com">info@example.com</a></li>
-          <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+          <li><a class="link-footer" href="mailto:info@example.com">info@example.com</a></li>
+          <li><a class="link-footer" href="tel:+380991111111">+38 099 111 11 11</a></li>
         </ul>
       </address>
     </footer>
