--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
       <nav>
         <a href="/" lang="en" class="logo">Web <span class="logo-dark">Studio</span></a>
         <ul class="site-nav">
-          <li><a class="link-header" href="./index.html">Студия</a></li>
+          <li><a class="header-link" href="./index.html">Студия</a></li>
           <li>
-            <a class="link-header" href="./portfolio.html">Портфолио</a>
+            <a class="header-link" href="./portfolio.html">Портфолио</a>
           </li>
-          <li><a class="link-header contact" href="#">Контакты</a></li>
+          <li><a class="header-link contact" href="#">Контакты</a></li>
         </ul>
       </nav>
       <!--contacts info not in nav-->
       <ul class="header-contacts">
-        <li><a class="link-header" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a class="link-header" href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li><a class="header-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a class="header-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
 
@@ -149,15 +149,15 @@
         <ul class="footer">
           <li>
             <a
-              class="link-footer location"
+              class="footer-link location"
               href="https://goo.gl/maps/vdUjSE2Tv6SdJSwDA"
               target="_blank"
               rel="noopener noreferrer"
               >г. Киев, пр-т Леси Украинки, 26
             </a>
           </li>
-          <li><a class="link-footer" href="mailto:info@example.com">info@example.com</a></li>
-          <li><a class="link-footer" href="tel:+380991111111">+38 099 111 11 11</a></li>
+          <li><a class="footer-link" href="mailto:info@example.com">info@example.com</a></li>
+          <li><a class="footer-link" href="tel:+380991111111">+38 099 111 11 11</a></li>
         </ul>
       </address>
     </footer>
