--- a/portfolio.html
+++ b/portfolio.html
@@ -12,17 +12,17 @@
     <header class="header">
       <!--page navigation-->
       <nav>
-        <a href="/" lang="en" class="logo">Web <span class="logo-dark">Studio</span></a>
-        <ul class="site-nav">
-          <li><a class="header-link" href="./index.html">Студия</a></li>
+        <a href="#" lang="en" class="logo">Web <span class="logo-dark">Studio</span></a>
+        <ul class="nav list">
+          <li><a class="nav-link" href="./index.html">Студия</a></li>
           <li>
-            <a class="header-link" href="./portfolio.html">Портфолио</a>
+            <a class="nav-link link-active" href="./portfolio.html">Портфолио</a>
           </li>
-          <li><a class="header-link contact" href="#">Контакты</a></li>
+          <li><a class="nav-link" href="#">Контакты</a></li>
         </ul>
       </nav>
       <!--contacts info not in nav-->
-      <ul class="header-contacts">
+      <ul class="header-contacts list">
         <li><a class="header-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         <li><a class="header-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
@@ -31,7 +31,7 @@
       <!-- Section filtr -->
       <section class="section-filter">
         <h1 hidden>Filter</h1>
-        <ul class="portfolio">
+        <ul class="portfolio list">
           <li>
             <button class="portfolio-button" type="button">Все</button>
           </li>
@@ -48,7 +48,7 @@
             <button class="portfolio-button" type="button">Маркетинг</button>
           </li>
         </ul>
-        <ul class="content">
+        <ul class="content list">
           <li class="content-item">
             <img src="./images/./portfolio_img/technokriak_1.jpg" alt="Фото веб-сайта технокряк" />
             <h2 class="content-title">Технокряк</h2>
@@ -104,7 +104,7 @@
     <footer>
       <a href="#" class="logo">Web<span class="logo-light">Studio</span></a>
       <address>
-        <ul class="footer">
+        <ul class="footer list">
           <li>
             <a
               class="footer-link location"
