--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
     <header class="header">
       <!--page navigation-->
       <nav>
-        <a href="/" lang="en" class="logo">Web <span class="logo-dark">Studio</span></a>
-        <ul class="site-nav">
-          <li><a class="header-link" href="./index.html">Студия</a></li>
+        <a href="#" lang="en" class="logo">Web <span class="logo-dark">Studio</span></a>
+        <ul class="nav list">
+          <li><a class="nav-link link-active" href="./index.html">Студия</a></li>
           <li>
-            <a class="header-link" href="./portfolio.html">Портфолио</a>
+            <a class="nav-link" href="./portfolio.html">Портфолио</a>
           </li>
-          <li><a class="header-link contact" href="#">Контакты</a></li>
+          <li><a class="nav-link" href="#">Контакты</a></li>
         </ul>
       </nav>
       <!--contacts info not in nav-->
-      <ul class="header-contacts">
+      <ul class="header-contacts list">
         <li><a class="header-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         <li><a class="header-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
@@ -38,7 +38,7 @@
       <section class="section-features">
         <!--make invisible h2 later-->
         <h2 class="section-title">Benefits</h2>
-        <ul class="feature">
+        <ul class="feature list">
           <li class="feature-item">
             <h3 class="feature-title">Внимание к деталям</h3>
             <p class="feature-text">
@@ -68,7 +68,7 @@
       <!--Section work-->
       <section class="section-work">
         <h2 class="section-title">Чем мы занимаемся</h2>
-        <ul class="work">
+        <ul class="work list">
           <li class="work-item">
             <img
               src="./images/block_scheme2.jpg"
@@ -98,7 +98,7 @@
       <!--our_team-->
       <section class="section-team">
         <h2 class="section-title">Наша команда</h2>
-        <ul class="team">
+        <ul class="team list">
           <li class="team-item">
             <img
               src="./images/ihor_demian2.jpg"
@@ -146,7 +146,7 @@
     <footer>
       <a href="#" class="logo">Web<span class="logo-light">Studio</span></a>
       <address>
-        <ul class="footer">
+        <ul class="footer list">
           <li>
             <a
               class="footer-link location"
