--- a/portfolio.html
+++ b/portfolio.html
@@ -4,58 +4,78 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portofolio</title>
+    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!--Header-->
-    <header class="header">
+    <header class="page-header">
       <!--page navigation-->
-      <nav>
-        <a href="#" lang="en" class="logo">Web <span class="logo-dark">Studio</span></a>
-        <ul class="nav list">
-          <li><a class="nav-link" href="./index.html">Студия</a></li>
-          <li>
-            <a class="nav-link link-active" href="./portfolio.html">Портфолио</a>
+      <nav class="navigation">
+        <a href="#" lang="en" class="logo link list">Web <span class="logo-dark">Studio</span></a>
+        <ul class="nav-list list">
+          <li class="nav-item">
+            <a class="nav-link link" href="./index.html">Студия</a>
           </li>
-          <li><a class="nav-link" href="#">Контакты</a></li>
+          <li class="nav-item">
+            <a class="nav-link link-active link" href="./portfolio.html">Портфолио</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link link" href="#">Контакты</a>
+          </li>
         </ul>
       </nav>
-      <!--contacts info not in nav-->
+      <!--contacts info -->
       <ul class="header-contacts list">
-        <li><a class="header-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a class="header-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li>
+          <a class="header-link-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li>
+          <a class="header-link-phone link" href="tel:+380961111111">+38 096 111 11 11</a>
+        </li>
       </ul>
     </header>
     <main>
       <!-- Section filtr -->
       <section class="section-filter">
         <h1 hidden>Filter</h1>
-        <ul class="portfolio list">
+        <ul class="filter-list list">
           <li>
-            <button class="portfolio-button" type="button">Все</button>
+            <button class="filter-btn" type="button">Все</button>
           </li>
           <li>
-            <button class="portfolio-button" type="button">Веб-сайты</button>
+            <button class="filter-btn" type="button">Веб-сайты</button>
           </li>
           <li>
-            <button class="portfolio-button" type="button">Приложения</button>
+            <button class="filter-btn" type="button">Приложения</button>
           </li>
           <li>
-            <button class="portfolio-button" type="button">Дизайн</button>
+            <button class="filter-btn" type="button">Дизайн</button>
           </li>
           <li>
-            <button class="portfolio-button" type="button">Маркетинг</button>
+            <button class="filter-btn" type="button">Маркетинг</button>
           </li>
         </ul>
-        <ul class="content list">
+        <!-- CONTENT -->
+        <ul class="content-list list">
           <li class="content-item">
-            <img src="./images/./portfolio_img/technokriak_1.jpg" alt="Фото веб-сайта технокряк" />
+            <img
+              class="content-img"
+              src="./images/./portfolio_img/technokriak_1.jpg"
+              alt="Фото веб-сайта технокряк"
+            />
             <h2 class="content-title">Технокряк</h2>
             <p class="content-text">Веб-сайт</p>
           </li>
           <li class="content-item">
             <img
+              class="content-img"
               src="./images/./portfolio_img/poster_new_oll_2.jpg"
               alt="Постер New Orlean vs Golden Sta"
             />
@@ -63,37 +83,65 @@
             <p class="content-text">Дизайн</p>
           </li>
           <li class="content-item">
-            <img src="./images/./portfolio_img/seafood_3.jpg" alt="Ресторан Seafood" />
+            <img
+              class="content-img"
+              src="./images/./portfolio_img/seafood_3.jpg"
+              alt="Ресторан Seafood"
+            />
             <h2 class="content-title">Ресторан Seafood</h2>
             <p class="content-text">Приложение</p>
           </li>
           <li class="content-item">
-            <img src="./images/./portfolio_img/prime_4.jpg" alt="Фотография наушников" />
+            <img
+              class="content-img"
+              src="./images/./portfolio_img/prime_4.jpg"
+              alt="Фотография наушников"
+            />
             <h2 class="content-title">Проект Prime</h2>
             <p class="content-text">Маркетинг</p>
           </li>
           <li class="content-item">
-            <img src="./images/./portfolio_img/boxes_5.jpg" alt="Фото коробок с надписями" />
+            <img
+              class="content-img"
+              src="./images/./portfolio_img/boxes_5.jpg"
+              alt="Фото коробок с надписями"
+            />
             <h2 class="content-title">Проект Boxes</h2>
             <p class="content-text">Приложение</p>
           </li>
           <li class="content-item">
-            <img src="./images/./portfolio_img/no_borders_6.jpg" alt="Фото монитора" />
+            <img
+              class="content-img"
+              src="./images/./portfolio_img/no_borders_6.jpg"
+              alt="Фото монитора"
+            />
             <h2 class="content-title">Inspiration has no Borders</h2>
             <p class="content-text">Веб-сайт</p>
           </li>
           <li class="content-item">
-            <img src="./images/./portfolio_img/limied_editon7.jpg" alt="Фото открытой книги" />
+            <img
+              class="content-img"
+              src="./images/./portfolio_img/limied_editon7.jpg"
+              alt="Фото открытой книги"
+            />
             <h2 class="content-title">Издание Limited Edition</h2>
             <p class="content-text">Дизайн</p>
           </li>
           <li class="content-item">
-            <img src="./images/./portfolio_img/lab_8.jpg" alt="Фотография этикетки" />
+            <img
+              class="content-img"
+              src="./images/./portfolio_img/lab_8.jpg"
+              alt="Фотография этикетки"
+            />
             <h2 class="content-title">Проект LAB</h2>
             <p class="content-text">Маркетинг</p>
           </li>
           <li class="content-item">
-            <img src="./images/./portfolio_img/grow_bisn_9.jpg" alt="Фото открытого планшета" />
+            <img
+              class="content-img"
+              src="./images/./portfolio_img/grow_bisn_9.jpg"
+              alt="Фото открытого планшета"
+            />
             <h2 class="content-title">Growing Business</h2>
             <p class="content-text">Приложение</p>
           </li>
@@ -101,21 +149,25 @@
       </section>
     </main>
     <!--Footer-->
-    <footer>
-      <a href="#" class="logo">Web<span class="logo-light">Studio</span></a>
-      <address>
-        <ul class="footer list">
-          <li>
+    <footer class="page-footer">
+      <a href="#" class="logo link list">Web<span class="logo-light">Studio</span></a>
+      <address class="footer-addr">
+        <ul class="footer-list list">
+          <li class="footer-item">
             <a
-              class="footer-link location"
+              class="footer-link location link"
               href="https://goo.gl/maps/vdUjSE2Tv6SdJSwDA"
               target="_blank"
               rel="noopener noreferrer"
               >г. Киев, пр-т Леси Украинки, 26
             </a>
           </li>
-          <li><a class="footer-link" href="mailto:info@example.com">info@example.com</a></li>
-          <li><a class="footer-link" href="tel:+380991111111">+38 099 111 11 11</a></li>
+          <li class="footer-item">
+            <a class="footer-link-mail link" href="mailto:info@example.com">info@example.com</a>
+          </li>
+          <li class="footer-item">
+            <a class="footer-link-phone link" href="tel:+380991111111">+38 099 111 11 11</a>
+          </li>
         </ul>
       </address>
     </footer>
